# core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GNUmakefile  Makefile  README.md
.builds/: debian_stretch.yml  freebsd.yml  freebsd_latest.yml
dev/doc/book/: core-manual.htm  core-manual.org
dev/doc/book/examples/sh/: amiga.sh  buildDevInDebianLike.sh  buildDevOnArchLinux.sh  buildDevOnFreeBSD.sh  buildDevOnHaiku.sh  buildDevOnMINIX3.sh  buildDevOnNetBSD.sh  runUnitTest.sh  unixLike.sh  usingMake.sh  windows-mingw.sh  windows-msvc.bat  windows.sh
dev/doc/examples/: hash-map-example.c  string-example.c  vector-example.c
dev/doc/man/man3/: octaspire-core.3
dev/etc/: amalgamation_head.c  amalgamation_impl_head.c  amalgamation_impl_tail.c  amalgamation_impl_unit_test_head.c  amalgamation_impl_unit_test_tail.c  bump-version.sh  pre-push  tag-version.sh
dev/include/octaspire/core/: octaspire_container_list.h  octaspire_container_utf8_string.h  octaspire_container_vector.h  octaspire_core_config.h  octaspire_helpers.h  octaspire_input.h  octaspire_list.h  octaspire_map.h  octaspire_memory.h  octaspire_pair.h  octaspire_queue.h  octaspire_semver.h  octaspire_stdio.h  octaspire_string.h  octaspire_utf8.h  octaspire_vector.h
dev/src/: octaspire_container_list.c  octaspire_container_pair.c  octaspire_container_queue.c  octaspire_container_utf8_string.c  octaspire_container_vector.c  octaspire_helpers.c  octaspire_input.c  octaspire_list.c  octaspire_map.c  octaspire_memory.c  octaspire_pair.c  octaspire_queue.c  octaspire_semver.c  octaspire_stdio.c  octaspire_string.c  octaspire_utf8.c  octaspire_vector.c
dev/test/: test.c  test_container_hash_map.c  test_container_list.c  test_container_pair.c  test_container_utf8_string.c  test_container_vector.c  test_helpers.c  test_input.c  test_list.c  test_map.c  test_memory.c  test_pair.c  test_queue.c  test_semver.c  test_stdio.c  test_string.c  test_utf8.c  test_vector.c
doc/book/: Octaspire_Core_Manual.adoc  Octaspire_Core_Manual.html
doc/examples/: a.out  hash-map-example.c  string-example.c  strings  strings.c  vector-example.c
etc/: amalgamate.sh  codecov.sh  new-release.sh  octaspire_core_amalgamated.c
etc/how-to-build/: FreeBSD.sh  OpenIndiana.sh  SyllableDesktop.sh  WindowsMinGW.bat  haiku.sh  linux.sh
include/octaspire/core/: octaspire_container_hash_map.h  octaspire_container_list.h  octaspire_container_pair.h  octaspire_container_queue.h  octaspire_container_utf8_string.h  octaspire_container_vector.h  octaspire_core_config.h.in  octaspire_helpers.h  octaspire_input.h  octaspire_memory.h  octaspire_region.h  octaspire_stdio.h  octaspire_utf8.h
release/: LICENSE  README  octaspire-core-amalgamated.c
release/documentation/: Octaspire_Core_Manual.html  core-manual.html
release/examples/: example.c  hash-map-example.c  string-example.c  vector-example.c
release/how-to-build/: AROS.sh  AmigaOS41.sh  DragonFlyBSD.sh  FreeBSD.sh  MidnightBSD.sh  NetBSD.sh  OpenBSD.sh  SyllableDesktop.sh  linux.sh  macOS.sh  minix3.sh  termux.sh  windows-mingw.sh  windows-msvc.bat  windows.sh
src/: octaspire_container_hash_map.c  octaspire_container_list.c  octaspire_container_pair.c  octaspire_container_queue.c  octaspire_container_utf8_string.c  octaspire_container_vector.c  octaspire_helpers.c  octaspire_input.c  octaspire_memory.c  octaspire_region.c  octaspire_stdio.c  octaspire_utf8.c
test/: CMakeLists.txt  test.c  test_container_hash_map.c  test_container_list.c  test_container_pair.c  test_container_queue.c  test_container_utf8_string.c  test_container_vector.c  test_helpers.c  test_input.c  test_memory.c  test_region.c  test_stdio.c  test_utf8.c
